--- a/examples/awa.ipynb
+++ b/examples/awa.ipynb
@@ -1,14 +1,75 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zero-Shot Learning With Pytorch\n",
+    "\n",
+    "Hello guys, today I have a pretty interesting framework to talk about. This framework will allow us to classify images which we have never seen during the training. \n",
+    "\n",
+    "Last year I worked in One-Shot Learning (ONE) [1] to predict similarity between Time Series. To do so, we implemented a Siamese Neural Network [1] that was able to compute features from two different time series at a time, and later compare them using a simple L1 distance.\n",
+    "\n",
+    "But today I don't want to talk about ONE, I want to talk about a more powerful framework called Zero-Shot Learning (ZSL), which, as I commented before, it can classify unseen images.\n",
+    "\n",
+    "## How ZSL works\n",
+    "\n",
+    "To explain in a high level how ZSL I want to mention a quora answer [2] which I find useful and comprehensive. \n",
+    " \n",
+    "> What if I show you an image of an animal, given you have never seen that animal before, can you guess the name of the animal? Maybe, if you have somewhere read about that particular animal. Let's say I show a picture of zebra to a child who has never seen a zebra but has seen a horse and also she is taught that a zebra looks like a horse but with stripes. Can she identify it now? Most probably, yes!\n",
+    "\n",
+    "This assumption may rings a bell to you when talking about Natural Language Processing (NLP) and *word-embeddings*. With *word-embeddings* we can represent a word using a vector. If two words have a similar semantic, then the vectors will be pretty close on their vector space [3].\n",
+    "\n",
+    "> Let's consider a word embedding of three dimensions (although in practice the embedding varies from 100 to 300-dimensional vectors). Let these three dimensions represent features like stripes, animalness, and whiteness. So for a tiger, it would be [1, 1, 0] i.e a tiger has stripes, it is an animal but is not white in colour and for a rabbit it would be [0, 1, 1] as a rabbit does not have stripes, but is an animal and white in colour.\n",
+    "\n",
+    "Now coming back to CNNs, we can represent an image using a set of features, also known as a **feature vector**. A straight forward way to create a feature vector from an image is using a pretrained network.\n",
+    "\n",
+    "For instance, we can retrieve a feature vector from an image using PyTorch with few lines of code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Random image feature vector: torch.Size([1024])\n"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "import torchvision.models as zoo\n",
+    "\n",
+    "image = torch.randn((1, 3, 224, 224))\n",
+    "model = zoo.densenet121(pretrained=True)\n",
+    "feature_vector = F.adaptive_avg_pool2d(model.features(image), (1, 1))\n",
+    "print('Random image feature vector:', feature_vector.view(-1).size()) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Therefore, for ZSL tasks, we won't use the feature vectors to classify the images into labels, we are going to use those features to match the feature vectors to a semantic representation of the label, for example, a word embedding. \n",
+    "\n",
+    "So, if we have an image of a tiger and his corresponding word embedding [1, 1, 0], we are going to do a regression task in order the label representation gets closer to the feature vector. And later, when we feed a zebra image (unseen image during training) to the pretrained CNN, we will be able to do a search task to the word embedding space and get the closest one. *So we were able to identify an image of a zebra which we didn't have in our training data, but had a word embedding for it.*\n",
+    "\n",
+    "## ZSL Framework definition\n",
+    "\n",
+    "At training time we have a dataset $D$ with $N$ training samples. Then, the dataset is given by $D = \\{(I_i, y^u_i, t^u_i), i = 1, ..., N\\}$ with associated labels $\\tau$, where $I_i$ is the $i$th training image, $y^u_i$ is the corresponding $L$-Dimensional semantic representation (word embedding, text description, etc.), $t^u_i \\in \\tau$ is the $u$th training class for $i$th image. \n",
+    "\n",
+    "Therefore, given a new test image $I_j$, the goal of ZSL is to predict a class label $t^u_j \\in \\tau'$, where $\\tau \\cap \\tau' = \\emptyset $. Meaning that both images and its label are not seen during training.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -18,7 +79,6 @@
    "source": [
     "import sys\n",
     "\n",
-    "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
     "sys.path.append('..')\n",
@@ -370,19 +430,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## References\n",
+    "\n",
+    "[1] Siamese Neural Networks for One-Shot Image Recognition - https://www.cs.cmu.edu/~rsalakhu/papers/oneshot1.pdf\n",
+    "\n",
+    "[2] Quora What is zero-shot learning? https://www.quora.com/What-is-zero-shot-learning\n",
+    "\n",
+    "[3] Playing with word embeddings - https://guillem96.github.io/guillem96-blog\n",
+    "\n",
+    "[2] Zero-Shot Learning - A Comprehensive Evaluation of the Good, the Bad and the Ugly - https://arxiv.org/pdf/1707.00600.pdf"
+   ]
   }
  ],
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('pytorch': conda)",
+   "display_name": "Python 3.7.6 64-bit",
    "language": "python",
-   "name": "python37664bitpytorchcondacbce87b99faf42faa84e2858cb997327"
+   "name": "python37664bita0710ec61d024f3795d397d6ea4241eb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -394,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
